# rust-shed

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: main.yml  rust-shed_linux.yml
async_unit/: Cargo.toml
async_unit/src/: lib.rs
cloned/: Cargo.toml
cloned/src/: lib.rs
codegen_includer_proc_macro/src/: lib.rs
failure_ext/: Cargo.toml
failure_ext/src/: context_streams.rs  convert.rs  slogkv.rs
lock_ext/: Cargo.toml
lock_ext/src/: lib.rs
shed/: .rlsconfig
shed/abomonable_string/: BUCK  Cargo.toml
shed/ascii_ext/: Cargo.toml
shed/ascii_ext/src/: lib.rs
shed/async_compression/: Cargo.toml
shed/async_compression/legacy-mononoke/: Cargo.toml
shed/async_compression/src/: compressor.rs  decompressor.rs  lib.rs  membuf.rs  metered.rs  raw.rs  retry.rs  test.rs
shed/async_once_cell/: BUCK  Cargo.toml
shed/async_once_cell/src/: lib.rs
shed/async_process_traits/: Cargo.toml  README.md
shed/async_unit/: Cargo.toml
shed/async_unit/src/: lib.rs
shed/borrowed/: BUCK  Cargo.toml
shed/borrowed/src/: lib.rs
shed/bounded_traversal/: Cargo.toml
shed/buffered_weighted/: BUCK  Cargo.toml
shed/bytes_ext/: Cargo.toml
shed/bytes_ext/src/: collect.rs  compat.rs  convert.rs  lib.rs
shed/cached_config/: BUCK  Cargo.toml
shed/cached_config/src/: facebook.rs  file_source.rs  handle.rs  lib.rs  oss.rs  refreshable_entities.rs  store.rs  test_source.rs  tests.rs
shed/cachelib_stub/: BUCK  Cargo.toml
shed/cachelib_stub/src/: abomonation_future_cache.rs  lib.rs  lrucache.rs  oss.rs
shed/cachelib_stub/src/oss/: abomonation_future_cache.rs  dummy_cache.rs  lrucache.rs  mod.rs
shed/chrome_trace/: BUCK  Cargo.toml
shed/chrome_trace/src/: lib.rs
shed/cloned/: BUCK  Cargo.toml
shed/codegen_includer_proc_macro/: BUCK  Cargo.toml  build.rs
shed/codegen_includer_proc_macro/src/: lib.rs
shed/codegen_includer_proc_macro/tests/: main.rs
shed/codegen_includer_proc_macro/tests/fixtures/: lib.rs
shed/detect_eden/: BUCK  Cargo.toml
shed/facet/: BUCK  Cargo.toml
shed/facet/proc_macros/: Cargo.toml  container_impl.rs  facet_impl.rs  factory_impl.rs  lib.rs  util.rs
shed/facet/src/: lib.rs
shed/facet/test/: async_test.rs  basic_test.rs  build_from_test.rs  delegate_test.rs  deps_test.rs  fallible_test.rs  from_container_test.rs  params_test.rs  static_test.rs  tuple_struct_test.rs
shed/failure_ext/: BUCK  Cargo.toml
shed/failure_ext/src/: context_futures.rs  context_streams.rs  convert.rs  lib.rs  macros.rs  slogkv.rs
shed/failure_ext/src/chain/: exttraits.rs  mod.rs  test.rs
shed/fbinit/: BUCK  Cargo.toml
shed/fbinit/fbinit-tokio/: Cargo.toml  facebook.rs  lib.rs
shed/fbinit/fbinit-tokio-02/: Cargo.toml  lib.rs
shed/fbinit/fbinit_macros/: Cargo.toml  args.rs  expand.rs  lib.rs
shed/fbinit/macros/: Cargo.toml  expand.rs  lib.rs
shed/fbinit/src/: lib.rs  oss.rs
shed/fbinit/test/: fbinit_test.rs
shed/fbthrift_ext/: BUCK
shed/fsiomicrobench/: Cargo.toml
shed/futures_01_ext/: BUCK  Cargo.toml
shed/futures_01_ext/src/: decode.rs  encode.rs  futures_ordered.rs  io.rs  lib.rs  select_all.rs  split_err.rs  stream_wrappers.rs  streamfork.rs
shed/futures_01_ext/src/bounded_traversal/: dag.rs  stream.rs  tests.rs  tree.rs
shed/futures_01_ext/src/bytes_stream/: bytes_stream_future.rs  mod.rs
shed/futures_01_ext/src/stream_wrappers/: collect_no_consume.rs  collect_to.rs
shed/futures_ext/: BUCK  Cargo.toml
shed/futures_ext/src/: decode.rs  encode.rs  io.rs  launch.rs  lib.rs  select_all.rs  split_err.rs  stream.rs  stream_clone.rs  streamfork.rs
shed/futures_ext/src/bounded_traversal/: common.rs  dag.rs  mod.rs  stream.rs  tests.rs  tree.rs
shed/futures_ext/src/bytes_stream/: bytes_stream_future.rs  mod.rs
shed/futures_ext/src/future/: abort_handle_ref.rs  conservative_receiver.rs  mod.rs  on_cancel.rs  on_cancel_with_data.rs  try_shared.rs
shed/futures_ext/src/stream/: mod.rs  return_remainder.rs  stream_with_timeout.rs  weight_limited_buffered_stream.rs  yield_periodically.rs
shed/futures_ext/src/stream_wrappers/: collect_to.rs  mod.rs
shed/futures_lazy_shared/: BUCK  Cargo.toml
shed/futures_retry/: Cargo.toml
shed/futures_stats/: BUCK  Cargo.toml
shed/futures_stats/src/: futures01.rs  futures03.rs  lib.rs
shed/futures_stats/test/: main.rs
shed/hash_memo/: BUCK  Cargo.toml  README.md
shed/hash_memo/src/: lib.rs
shed/hlist_to_tuple/: BUCK  Cargo.toml
shed/hostcaps/: Cargo.toml  hostcaps.h
shed/hostcaps/src/: lib.rs
shed/hostname/: BUCK  Cargo.toml
shed/hostname/src/: lib.rs
shed/limited_async_read/: Cargo.toml
shed/limited_async_read/src/: lib.rs
shed/lock_ext/: BUCK  Cargo.toml
shed/lock_ext/src/: lib.rs
shed/memcache_stub/: BUCK  Cargo.toml
shed/memcache_stub/common/: Cargo.toml  client.rs  keygen.rs  lib.rs
shed/memcache_stub/src/: lib.rs
shed/netstring/: BUCK  Cargo.toml
shed/netstring/src/: decode.rs  encode.rs  lib.rs
shed/ods/: BUCK  (+1 more)
shed/panichandler/: BUCK  Cargo.toml
shed/panichandler/src/: lib.rs
shed/panichandler/test/: shed_panic_deep.rs  shed_panic_multithread.rs  shed_panic_multithread_abort.rs  shed_panic_simple.rs  test.rs  test_deep.rs  testmultithread.rs  testmultithread_abort.rs  testrunner.rs  testrunner.sh
shed/perthread/: BUCK  Cargo.toml
shed/perthread/src/: lib.rs
shed/scuba_sample/: BUCK  Cargo.toml
shed/scuba_sample/builder/: Cargo.toml
shed/scuba_sample/builder/src/: builder.rs  lib.rs
shed/scuba_sample/client/: Cargo.toml
shed/scuba_sample/client/src/: client.rs  lib.rs
shed/scuba_sample/derive/: Cargo.toml
shed/scuba_sample/derive/src/: lib.rs
shed/scuba_sample/derive_tests/: Cargo.toml  basic.rs  customization.rs  inline.rs  test.rs
shed/scuba_sample/src/: builder.rs  client.rs  lib.rs  sample.rs  sampling.rs  value.rs
shed/scuba_stub/: BUCK  Cargo.toml
shed/scuba_stub/src/: lib.rs
shed/secure_utils/: BUCK  Cargo.toml
shed/secure_utils/src/: facebook.rs  lib.rs  oss.rs
shed/serde-starlark/: Cargo.toml
shed/serde-starlark/src/: lib.rs  ser.rs
shed/serde-starlark/test/: starlark_test.rs
(+234 files in other folders)
