[patch.crates-io]
abomonation = { git = "https://github.com/markbt/abomonation", rev = "0f43346d2afa2aedc64d61f3f4273e8d1e454642" }
base64urlsafedata = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "d278c56adfa39a0723c79bdcd461644194bc5138" }
cbindgen = { git = "https://github.com/mozilla/cbindgen.git", rev = "89a9faa97cc267e90fc95a1cc6177a001aed5b51" }
cxx = { package = "cxx", git = "https://github.com/facebookexperimental/cxx.git", rev = "2ea39c564284a70fdc1793fd72c442433e5a2638" }
cxx-build = { package = "cxx-build", git = "https://github.com/facebookexperimental/cxx.git", rev = "2ea39c564284a70fdc1793fd72c442433e5a2638" }
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7dc6e324b1788a6b7fb9f3a1953c512923a3e9f0" }
graphql-parser = { git = "https://github.com/graphql-rust//graphql-parser", rev = "8d76425d83c40670570cc325f57c730262f07456" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
lru-disk-cache = { git = "https://github.com/mozilla/sccache", rev = "fdbf843d174c6796d736b2b61dab0297670390f8" }
perf-event = { version = "0.4", git = "https://github.com/krallin/perf-event.git", rev = "86224a9bc025d5d19f719542f27c8c629a08b167" }
perf-event-open-sys = { version = "4.0", git = "https://github.com/krallin/perf-event.git", rev = "86224a9bc025d5d19f719542f27c8c629a08b167" }
pingora-cache = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-core = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-error = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-header-serde = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-http = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-lru = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-openssl = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-pool = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-runtime = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
pingora-timeout = { git = "https://github.com/cloudflare/pingora.git", rev = "aa37d5448746e80f871c444cf6a6e2e1c599b5fd" }
plexi-core = { git = "https://github.com/haochenuw/plexi", rev = "a0326d9802a594ca5382b075620135607e1cdb23" }
pyo3-build-config = { package = "pyo3-build-config", version = "0.21.2", git = "https://github.com/fbsource/pyo3", rev = "ff94a09031cc29d88d57ae3c846e5b871497aeb9" }
quickcheck = { git = "https://github.com/jakoschiko/quickcheck", rev = "6ecdf5bb4b0132ce66670b4d46453aa022ea892c" }
riscv = { git = "https://github.com/rust-embedded/riscv.git", rev = "28e9b02d45827055188be0dbd1f800ba64bc75e6" }
tracing-attributes = { git = "https://github.com/tokio-rs/tracing.git", rev = "70a867877d5232b686d5fd70bbb4cbf37f4b38c6" }

[workspace]
members = [
  "shed/abomonable_string",
  "shed/ascii_ext",
  "shed/async_once_cell",
  "shed/borrowed",
  "shed/buffered_weighted",
  "shed/cached_config",
  "shed/cachelib_stub",
  "shed/chrome_trace",
  "shed/cloned",
  "shed/codegen_includer_proc_macro",
  "shed/detect_eden",
  "shed/facet",
  "shed/facet/proc_macros",
  "shed/failure_ext",
  "shed/fbinit",
  "shed/fbinit/fbinit-tokio",
  "shed/fbinit/fbinit_macros",
  "shed/fbthrift_ext/adapters",
  "shed/fbthrift_ext/framed",
  "shed/fbthrift_ext/socket",
  "shed/fbthrift_ext/tcp",
  "shed/fbthrift_ext/util",
  "shed/futures_01_ext",
  "shed/futures_ext",
  "shed/futures_lazy_shared",
  "shed/futures_stats",
  "shed/hash_memo",
  "shed/hlist_to_tuple",
  "shed/hostcaps",
  "shed/hostname",
  "shed/justknobs_stub",
  "shed/justknobs_stub/cached_config_thrift_struct",
  "shed/justknobs_stub/cached_config_thrift_struct/clients",
  "shed/justknobs_stub/cached_config_thrift_struct/mocks",
  "shed/justknobs_stub/cached_config_thrift_struct/services",
  "shed/lock_ext",
  "shed/memcache_stub",
  "shed/memcache_stub/common",
  "shed/netstring",
  "shed/ods",
  "shed/panichandler",
  "shed/perthread",
  "shed/quickcheck_arbitrary_derive",
  "shed/scuba_sample",
  "shed/scuba_sample/derive",
  "shed/scuba_sample/derive_tests",
  "shed/scuba_stub",
  "shed/secure_utils",
  "shed/services",
  "shed/services/common",
  "shed/shared_error",
  "shed/slog_glog_fmt",
  "shed/slog_stats",
  "shed/sorted_vector_map",
  "shed/sql",
  "shed/sql/common",
  "shed/sql/derive",
  "shed/sql/mysql_client_traits",
  "shed/sql/tests_lib",
  "shed/stats",
  "shed/stats/traits",
  "shed/thrift_compiler",
  "shed/time_ext",
  "shed/tokio-detectors",
  "shed/tokio-uds-compat",
]
resolver = "2"
