[patch.crates-io]
abomonation = { git = "https://github.com/markbt/abomonation", rev = "0f43346d2afa2aedc64d61f3f4273e8d1e454642" }
base64urlsafedata = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "d278c56adfa39a0723c79bdcd461644194bc5138" }
cbindgen = { git = "https://github.com/mozilla/cbindgen.git", rev = "89a9faa97cc267e90fc95a1cc6177a001aed5b51" }
cxx = { package = "cxx", git = "https://github.com/facebookexperimental/cxx.git", rev = "a596961aaf3467b94428273983363f8353c22f85" }
cxx-build = { package = "cxx-build", git = "https://github.com/facebookexperimental/cxx.git", rev = "a596961aaf3467b94428273983363f8353c22f85" }
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7dc6e324b1788a6b7fb9f3a1953c512923a3e9f0" }
graphql-parser = { git = "https://github.com/graphql-rust/graphql-parser", rev = "8d76425d83c40670570cc325f57c730262f07456" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2abba18c08fb5e70c699ba7992342e7ff8573b09" }
lru-disk-cache = { git = "https://github.com/mozilla/sccache", rev = "fdbf843d174c6796d736b2b61dab0297670390f8" }
pcap = { git = "https://github.com/qrnch-jan/pcap", rev = "0c6ed076c84ef0c63198d384a24d66b737b24e4a", features = ["capture-stream"] }
perf-event = { version = "0.4", git = "https://github.com/krallin/perf-event.git", rev = "86224a9bc025d5d19f719542f27c8c629a08b167" }
perf-event-open-sys = { version = "4.0", git = "https://github.com/krallin/perf-event.git", rev = "86224a9bc025d5d19f719542f27c8c629a08b167" }
profiling = { version = "1.0.16", git = "https://github.com/aclysma/profiling.git", rev = "1b3e20c8e59eddbb6ae0d64fff849d07a903dd0c" }
protobuf-build = { git = "https://github.com/fbsource/protobuf-build", rev = "ee1de946ce2fd7d06a7a4fab7141e02c49f0981f" }
quickcheck = { git = "https://github.com/jakoschiko/quickcheck", rev = "6ecdf5bb4b0132ce66670b4d46453aa022ea892c" }
stabby = { git = "https://github.com/fbsource/stabby", rev = "22db1dda19938ff7725a93db64012a5730325c5d" }
uefisettings = { git = "https://github.com/linuxboot/uefisettings", rev = "f16daed1d2bd1216204fd24e876c6477d03aebb3" }
uefisettings_backend_thrift = { git = "https://github.com/linuxboot/uefisettings", rev = "f16daed1d2bd1216204fd24e876c6477d03aebb3" }
vm-allocator = { git = "https://github.com/rust-vmm/vm-allocator", rev = "5fb545cc6e41fdc9f27d48d97ed26274a35bc6c6" }
warp = { git = "https://github.com/jdthomas/warp.git", rev = "c794232d182abaa3add8184e7d661e084cc516c5", features = ["tls"] }

[workspace]
members = [
  "shed/abomonable_string",
  "shed/ascii_ext",
  "shed/async_once_cell",
  "shed/borrowed",
  "shed/bounded_traversal",
  "shed/buffered_weighted",
  "shed/cached_config",
  "shed/cachelib_stub",
  "shed/chrome_trace",
  "shed/cloned",
  "shed/codegen_includer_proc_macro",
  "shed/detect_eden",
  "shed/facet",
  "shed/facet/proc_macros",
  "shed/failure_ext",
  "shed/fbinit",
  "shed/fbinit/fbinit-tokio",
  "shed/fbinit/fbinit_macros",
  "shed/fbthrift_ext/adapters",
  "shed/fbthrift_ext/framed",
  "shed/fbthrift_ext/socket",
  "shed/fbthrift_ext/tcp",
  "shed/fbthrift_ext/util",
  "shed/fsiomicrobench",
  "shed/futures_01_ext",
  "shed/futures_ext",
  "shed/futures_lazy_shared",
  "shed/futures_stats",
  "shed/hash_memo",
  "shed/hlist_to_tuple",
  "shed/hostcaps",
  "shed/hostname",
  "shed/justknobs_stub",
  "shed/justknobs_stub/cached_config_thrift_struct",
  "shed/justknobs_stub/cached_config_thrift_struct/clients",
  "shed/justknobs_stub/cached_config_thrift_struct/mocks",
  "shed/justknobs_stub/cached_config_thrift_struct/services",
  "shed/lock_ext",
  "shed/memcache_stub",
  "shed/memcache_stub/common",
  "shed/netstring",
  "shed/ods",
  "shed/panichandler",
  "shed/perthread",
  "shed/quickcheck_arbitrary_derive",
  "shed/scuba_sample",
  "shed/scuba_sample/builder",
  "shed/scuba_sample/client",
  "shed/scuba_sample/derive",
  "shed/scuba_sample/derive_tests",
  "shed/scuba_stub",
  "shed/secure_utils",
  "shed/services",
  "shed/services/common",
  "shed/shared_error",
  "shed/slog_glog_fmt",
  "shed/sorted_vector_map",
  "shed/sql",
  "shed/sql/common",
  "shed/sql/derive",
  "shed/sql/mysql_client_traits",
  "shed/sql/tests_lib",
  "shed/stats",
  "shed/stats/traits",
  "shed/thrift_compiler",
  "shed/time_ext",
  "shed/tokio-detectors",
  "shed/tokio-uds-compat",
  "shed/tracing_slog_compat",
  "shed/tracing_slog_compat/example",
]
resolver = "2"
