[package]
name = "ascii_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "ascii crate extensions"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/lib.rs"]

[dependencies]
ascii = "1.0"
quickcheck = "0.9"
rand = { version = "0.7", features = ["small_rng"] }
