[package]
name = "ascii_ext"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "ascii crate extensions"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
ascii = "1.0"
quickcheck = "0.9"
rand = { version = "0.7", features = ["small_rng"] }
