[package]
name = "async_compression"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/**/*.rs"]

[dependencies]
bytes = { version = "0.4", features = ["serde"] } # todo: remove
bzip2 = { version="0.3", features=["tokio"] }
flate2 = { version="1.0", features=["tokio", "rust_backend"], default-features=false }
futures = "0.1" # todo: rename to "futures-old"
tokio-io = "0.1"
zstd = "=0.4.23"

[dev-dependencies]
assert_matches = "1.3"
quickcheck = "0.9"
rand = { version = "0.7", features = ["small_rng"] }
tokio = "0.1" # todo: rename to "tokio-old"
