[package]
name = "async_compression"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "This crate adds Compressor and Decompressor wrappers around some common libraries"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/**/*.rs"]

[dependencies]
bytes = { version = "0.4", features = ["serde"] }
bzip2 = { version = "0.3", features = ["tokio"] }
flate2 = { version = "1.0", features = ["tokio", "rust_backend"], default-features = false }
futures = "0.1.30"
tokio-io = "0.1"
zstd = "=0.5.3+zstd.1.4.5"

[dev-dependencies]
assert_matches = "1.3"
quickcheck = "0.9"
rand = { version = "0.7", features = ["small_rng"] }
tokio = "0.1"
