[package]
name = "async_once_cell"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.10", features = ["full", "test-util"] }

[dev-dependencies]
futures = { version = "0.3.13", features = ["async-await", "compat"] }
rand = { version = "0.7", features = ["small_rng"] }
