[package]
name = "async_unit"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/lib.rs"]

[dependencies]
futures-preview = { package = "futures", version = "0.3.5", features = ["async-await", "compat"] }
tokio-compat = "0.1"

[dev-dependencies]
futures = "0.1"
tokio = { version = "=0.2.13", features = ["full", "test-util"] }
tokio-old = { package = "tokio", version = "0.1" }
