[package]
name = "async_unit"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Provides tokio_unit_test helper function for async unit tests that use Tokio"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
futures-preview = { package = "futures", version = "0.3.5", features = ["async-await", "compat"] }
tokio-compat = "0.1"

[dev-dependencies]
futures = "0.1.30"
tokio = { version = "0.2.25", features = ["full", "test-util"] }
tokio-old = { package = "tokio", version = "0.1" }
