[package]
name = "bytes_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Helpers to work with bytes 0.4 and 0.5"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/**/*.rs"]

[dependencies]
bytes = { version = "0.5", features = ["serde"] }
bytes-old = { package = "bytes", version = "0.4", features = ["serde"] }
ref-cast = "1.0.2"
