[package]
name = "bytes_ext"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Helpers to work with bytes 0.4 and 0.5"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = { version = "0.5", features = ["serde"] }
bytes-old = { package = "bytes", version = "0.4", features = ["serde"] }
ref-cast = "1.0.2"
