[package]
name = "cached_config"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Helpers to maintain cached set of configs"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
fbinit = { path = "../fbinit", version = "0.1.0" }
serde = { version = "=1.0.118", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_debug"] }

[dev-dependencies]
serde_derive = "1.0"
