[package]
name = "cached_config"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Helpers to maintain cached set of configs"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bytes = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["clock", "serde", "std"], default-features = false }
fbinit = { version = "0.1.0", path = "../fbinit" }
fbthrift = { version = "0.0.1+unstable", git = "https://github.com/facebook/fbthrift.git", branch = "master" }
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
slog = { version = "2.5", features = ["max_level_trace", "nested-values"] }

[dev-dependencies]
serde_derive = "1.0"
