[package]
name = "cachelib"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
futures_ext = { package = "futures_01_ext", path = "../futures_01_ext" }
abomonation = "0.7"
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
