[package]
name = "cachelib"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Cache library"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/**/*.rs"]

[dependencies]
futures_ext = { package = "futures_01_ext", path = "../futures_01_ext", version = "0.1.0" }
abomonation = "0.7"
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
