[package]
name = "cachelib"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Cache library"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
abomonation = "0.7"
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
futures_ext = { package = "futures_01_ext", path = "../futures_01_ext", version = "0.1.0" }
