[package]
name = "chrome-trace"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Crate for writing Trace Event JSON files"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1.0"
bytes = { version = "0.5", features = ["serde"] }
flate2 = { version = "1.0", features = ["tokio", "rust_backend"], default-features = false }
libc = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
zstd = "=0.5.3+zstd.1.4.5"

[dev-dependencies]
maplit = "1.0"
tempdir = "0.3"
