[package]
name = "chrome-trace"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Crate for writing Trace Event JSON files"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bytes = { version = "1.0", features = ["serde"] }
flate2 = { version = "1.0", features = ["rust_backend", "tokio"], default-features = false }
libc = "0.2.98"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
zstd = "=0.8.0+zstd.1.4.9"

[dev-dependencies]
maplit = "1.0"
tempdir = "0.3"
