[package]
name = "codegen_includer_proc_macro"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "GPLv2+"
build = "build.rs"
include = ["src/**/*.rs", "tests/**/*.rs"]

[lib]
path = "src/lib.rs"
proc-macro = true
test = false
doctest = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "visit", "visit-mut", "fold", "extra-traits"] }
