[package]
name = "codegen_includer_proc_macro"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Workaround for https://github.com/rust-lang/rfcs/issues/752"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"
proc-macro = true
test = false
doctest = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
quote = "1.0"
