[package]
name = "failure_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/**/*.rs"]

[dependencies]
anyhow = "^1.0"
failure = { version = "^0.1" } # prefer std::error::Error based libraries (anyhow, thiserror, snafu) wherever possible
futures = "0.1"
slog = { version="^2.5", features=["max_level_debug"] }
thiserror = "^1.0"
