[package]
name = "failure_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1.0"
failure = "0.1"
futures = "0.1"
slog = { version = "2.5", features = ["max_level_debug"] }

[dev-dependencies]
thiserror = "1.0"
