[package]
name = "failure_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Extensions to failure crate"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1.0"
failure = "0.1"
futures = "0.1.30"
slog = { version = "2.5", features = ["max_level_debug"] }

[dev-dependencies]
thiserror = "1.0"
