[package]
name = "fbinit"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs", "test/fbinit_test.rs"]

[lib]
path = "src/lib.rs"

[[test]]
name = "fbinit_test"
path = "test/fbinit_test.rs"

[dependencies]
macros = { path = "macros", version = "0.1.0" }
quickcheck = "0.9"

[dev-dependencies]
tokio = { version = "0.2.24", features = ["full", "test-util"] }
