[package]
name = "futures_01_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1.0"
bytes-old = { package = "bytes", version = "0.4", features = ["serde"] }
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
cloned = { path = "../cloned" }
lock_ext = { path = "../lock_ext" }
assert_matches = "1.3"
maplit = "1.0"
pretty_assertions = "0.6"
quickcheck = "0.9"
