[package]
name = "futures_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "GPLv2+"
include = ["src/**/*.rs"]

[dependencies]
cloned = { path = "../cloned" }
anyhow = "^1.0"
bytes = { version = "0.4", features = ["serde"] }
futures = "0.1" # todo: rename to "futures-old"
maplit = "^1.0"
tokio = "0.1" # todo: rename to "tokio-old"
tokio-io = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
async_unit = { path = "../async_unit" }
lock_ext = { path = "../lock_ext" }
netstring = { path = "../netstring" }
assert_matches = "^1.3"
pretty_assertions = "^0.6"
quickcheck = "0.9"
