[package]
name = "futures_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
cloned = { path = "../cloned" }
anyhow = "1.0"
byteorder = "1.3"
bytes = { version = "0.5", features = ["serde"] }
bytes-old = { package = "bytes", version = "0.4", features = ["serde"] }
futures = "0.1"
maplit = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-threadpool = "0.1"
tokio-util = "0.2"

[dev-dependencies]
lock_ext = { path = "../lock_ext" }
netstring = { path = "../netstring" }
assert_matches = "1.3"
pretty_assertions = "0.6"
quickcheck = "0.9"
