[package]
name = "futures_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook']
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs"]

[dependencies]
shared_error = { path = "../shared_error", version = "0.1.0" }
anyhow = "1.0"
futures = { version = "0.3.5", features = ["async-await", "compat"] }
pin-project = "0.4"
thiserror = "1.0"
tokio = { version = "0.2.24", features = ["full", "test-util"] }

[dev-dependencies]
assert_matches = "1.3"
async-stream = "0.3"
