[package]
name = "futures_stats"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Stats extension to futures crate"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "futures_stats_test"
path = "test/main.rs"

[dependencies]
futures_ext = { package = "futures_01_ext", path = "../futures_01_ext", version = "0.1.0" }
futures = { version = "0.3.5", features = ["async-await", "compat"] }
futures-old = { package = "futures", version = "0.1.30" }
tokio-old = { package = "tokio", version = "0.1" }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "0.2.24", features = ["full", "test-util"] }
tokio-timer = "0.2"
