[package]
name = "futures_stats"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
description = "Stats extension to futures crate"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "futures_stats_test"
path = "test/main.rs"

[dependencies]
futures = { version = "0.3.5", features = ["async-await", "compat"] }
futures-old = { package = "futures", version = "0.1.30" }
futures_ext = { package = "futures_01_ext", version = "0.1.0", path = "../futures_01_ext" }
tokio-old = { package = "tokio", version = "0.1" }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "0.2.25", features = ["full", "test-util"] }
tokio-timer = "0.2"
