[package]
name = "hash_memo"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+crates-hash-memo@fb.com>']
license = "MIT OR Apache-2.0"
description = "memoization/caching of hash values by Hash and Hasher implementations"
homepage = "https://github.com/facebookexperimental/rust-shed/"
repository = "https://github.com/facebookexperimental/rust-shed"
readme = "README.md"
keywords = ["hash", "memo", "memoize", "cache", "map", "set"]
categories = ["data-structures"]
include = ["src/**/*.rs"]

[dependencies]
once_cell = "1.4"

[dev-dependencies]
ahash = "0.4.4"
