[package]
name = "hostcaps"
version = "0.1.0"
authors = ["Facebook <opensource+rust-shed@fb.com>"]
edition = "2018"
readme = "../../README.md"
repository = "https://github.com/facebookexperimental/rust-shed/"
license = "MIT OR Apache-2.0"

[[bin]]
name = "test_hostcaps"
path = "src/bin/test.rs"

[dependencies]
anyhow = "1.0"
lazy_static = "1.0"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[features]
default = []
fb = []
