[package]
name = "hostname"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Crate for getting hostname"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"

[dependencies]
anyhow = "1.0"
hostname_orig = { package = "hostname", version = "0.3" }
