[package]
name = "limited_async_read"
edition = "2018"
version = "0.1.0"
authors = ['Facebook', 'Daniel Xu <dlxu@fb.com>']
license = "MIT OR Apache-2.0"
description = "AsyncRead implementation that operates over limited buffer size"
homepage = "https://github.com/facebookexperimental/rust-shed/"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"
include = ["src/**/*.rs"]

[dependencies]
tokio-io = "0.1"

[dev-dependencies]
futures = "0.1.30"
