[package]
name = "lock_ext"
edition = "2018"
version = "0.1.0"
authors = ['Facebook <opensource+rust-shed@fb.com>']
license = "MIT OR Apache-2.0"
description = "Extensions to std::sync::Mutex"
repository = "https://github.com/facebookexperimental/rust-shed/"
readme = "../../README.md"

[dependencies]
parking_lot = "0.10.2"
